[package]
name = "supply-api"
version = "0.1.0"
authors = ["Frank Li <frankli.consult@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
web3 = "0.15.0"
hex-literal = "0.3.1"
env_logger = "0.8"
dotenv = "0.15.0"